Fix module sizes on iOS (fixes #12)

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,15 +1,11 @@
 .home-content {
-  .scroll,
-  .button {
+  .scroll {
     height: 100%;
   }
   .scroll,
-  .button,
-  info-module,
   .module-content {
     width: 100%;
   }
-  info-module,
   .column {
     display: flex;
     align-items: center;
